plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.12'
}

group 'ch.skyfy'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.buildobjects:jproc:2.8.0'
    implementation 'com.zaxxer:nuprocess:2.0.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

}


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainClassName = "ch.skyfy.mcservermanager.ServerManagerLauncher"
}

javafx {
    version = "17.0.2"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
}

// ENABLE JAVA 14 PREVIEW (RECORD, PATTERN, ...)
tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}